--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -348,63 +348,65 @@ span.boo {
   }
 }
 
-.css-yc6gmw-MuiPaper-root-MuiCard-root {
-  padding-bottom: 40px;
-  padding-top: 40px;
-}
 .react-multi-carousel-dot button {
   border: none;
 }
 
 .recipeCard {
+  height: 500px;
+  display: flex;
+  flex-direction: column;
+  margin: 10px;
+  padding: 0px;
+  background-color: transparent !important;
+  box-shadow: none !important;
+  transition: all 500ms;
   &:hover {
-    box-shadow: 0 2px 20px rgb(182, 182, 182);
-  }
-}
-.cardMedia {
-  cursor: pointer;
-  width: 100% !important;
-}
-.css-yc6gmw-MuiPaper-root-MuiCard-root  .recipeCard {
-  background-color: $milk !important;
-  padding: 20px;
-  min-height: 610px !important;
-  .addtocartbtn {
-    position: relative;
-    z-index: 300;
-    background-color: $yellow !important;
-    &:hover {
-      background-color: $green !important;
+    .cardMedia {
+      box-shadow: 0 5px 25px #949494;
+    }
+    .cardContent {
+      box-shadow: 0 5px 20px #949494;
     }
   }
-}
-.recipeItems {
-  background-color: $milk !important;
-  padding: 20px;
-  min-height: 610px !important;
-  &:hover {
-    box-shadow: 0 2px 20px rgb(182, 182, 182);
+  .cardMedia {
+    border: 4px solid #539165;
+    cursor: pointer;
+    position: absolute;
+    top: 0;
+    left: 39%;
+    height: 240px;
+    width: 240px;
+    border-radius: 100%;
+    box-shadow: 0 2px 10px #a1a1a1;
+    z-index: 2;
+    transition: all 500ms;
   }
-  .addtocartbtn {
+  .cardContent {
+    background-color: white;
+    border-radius: 40px 10px;
+    box-shadow: 0 5px 10px #cacaca;
+    margin: 26px;
     position: relative;
-    z-index: 300;
-    background-color: $yellow !important;
-    &:hover {
-      background-color: $green !important;
+    z-index: 0;
+    padding-top: 80px;
+    height: 350px;
+    -webkit-flex-grow: 0;
+    top: 100px;
+    transition: all 500ms;
+    button {
+      transition: all 500ms;
+      margin-top: 10px;
+      &:hover {
+        background-color: $green;
+      }
+    }
+    @include tablets() {
+      height: auto;
     }
   }
-}
-.react-multi-carousel-track li:nth-child(even) .recipeCard {
-  background-color: $green !important;
-  padding: 20px;
-  min-height: 610px !important;
-  .addtocartbtn {
-    position: relative;
-    z-index: 300;
-    background-color: $milk !important;
-    &:hover {
-      background-color: $yellow !important;
-    }
+  @include tablets() {
+    height: auto;
   }
 }
 
@@ -469,4 +471,84 @@ textarea {
   border-radius: 10px;
   max-height: 500px !important;
   padding: 10px;
+}
+// --------------------------- recipe page ------------------------
+.recipeBg {
+  background-position: top;
+  background-size: contain;
+  background-attachment: fixed;
+  height: 400px;
+  background-image: url("../assets/RecipesHeader.jpg");
+  background-repeat: no-repeat;
+  h3 {
+    margin-top: 100px;
+    text-align: center;
+    color: black;
+    font-weight: bold;
+  }
+  input {
+    background-color: white !important;
+    box-shadow: 0 5px 20px #a7a7a7;
+  }
+  button {
+    position: absolute;
+    right: 22%;
+  }
+}
+.featuredRecipe {
+  background-color: $milk;
+  .featuredRecipeImg {
+    border: 4px solid #539165;
+    width: 300px;
+    height: 300px;
+    border-radius: 100%;
+    box-shadow: 0 2px 10px #a1a1a1;
+    z-index: 2;
+    transition: all 500ms;
+  }
+}
+.parallax-container {
+  position: relative;
+  width: 100%;
+  height: 500px;
+  overflow: hidden;
+}
+
+.parallax-layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+}
+
+.layer1 {
+  background-image: url("../assets/llayer1.svg");
+  z-index: 1;
+  background-size: 70%;
+  background-repeat: no-repeat;
+  background-position-x: 130%;
+}
+
+.layer2 {
+  background-image: url("../assets/llayer2.svg");
+  z-index: 2;
+  background-size: 70%;
+  background-repeat: no-repeat;
+}
+.recipeList {
+  background-image: url("../assets/listbg.svg");
+  background-size: cover;
+  background-repeat: repeat-y;
+}
+// ------------------ about us ---------------
+.teamSection {
+  img {
+    width: 250px;
+  }
+}
+.bgMilk{
+  background-color: $milk;
 }
