--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -361,6 +361,9 @@ span.boo {
   background-color: transparent !important;
   box-shadow: none !important;
   transition: all 500ms;
+  @include tablets() {
+    height: 500px !important;
+  }
   &:hover {
     .cardMedia {
       box-shadow: 0 5px 25px #949494;
@@ -394,6 +397,9 @@ span.boo {
     -webkit-flex-grow: 0;
     top: 100px;
     transition: all 500ms;
+    @include tablets() {
+      height: auto !important;
+    }
     button {
       transition: all 500ms;
       margin-top: 10px;
@@ -401,12 +407,6 @@ span.boo {
         background-color: $green;
       }
     }
-    @include tablets() {
-      height: auto;
-    }
-  }
-  @include tablets() {
-    height: auto;
   }
 }
 
@@ -503,14 +503,15 @@ textarea {
     height: 300px;
     border-radius: 100%;
     box-shadow: 0 2px 10px #a1a1a1;
-    z-index: 2;
+    z-index: 4;
     transition: all 500ms;
+    background-size: cover;
   }
 }
 .parallax-container {
   position: relative;
   width: 100%;
-  height: 500px;
+  height: fit-content;
   overflow: hidden;
 }
 
@@ -549,6 +550,72 @@ textarea {
     width: 250px;
   }
 }
-.bgMilk{
+.bgMilk {
   background-color: $milk;
+}
+
+//------------recipe info -------------------
+.recipeInfoBg {
+  background-position: top;
+  background-size: contain;
+  background-attachment: fixed;
+  height: 400px;
+  background-repeat: no-repeat;
+}
+.orgWave {
+  background-image: url("../assets/orgWave.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right;
+}
+.grWave {
+  background-image: url("../assets/grWave.svg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: left;
+}
+//------------user Profile ------------------
+.profileSec {
+  position: relative;
+  top: -100px;
+  div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .userProfile {
+    width: 200px !important;
+    position: relative !important;
+  }
+}
+.profileBg {
+  height: 400px;
+  background-image: url("../assets/profilePattern.png");
+  background-size: cover;
+  background-repeat: repeat;
+  width: 100%;
+  animation: slide 30s linear infinite;
+}
+
+@keyframes slide {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: -512px -512px;
+  }
+}
+//  --------------------- chat section ----------------------
+.ChatSection {
+  height: 90vh;
+  .replys {
+    height: 60vh;
+    overflow: auto;
+  }
+  .chat {
+    box-shadow: 0 -2px 2px gainsboro !important;
+    padding-top: 20px;
+  }
 }
